Adding frontend and added logging in the back. Also created the required infra